src/objects/AcceleratorSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to be configured by the Accelerator implementator.</description>
    <fields>
        <fullName>ClusterFieldForPublicGroups__c</fullName>
        <defaultValue>&quot;ExternalId__c&quot;</defaultValue>
        <description>When a cluster is created, a public group is created. This field determines which cluster field will be used as the name of the public group that is created for the cluster.</description>
        <inlineHelpText>When a cluster is created, a public group is created. This field determines which cluster field will be used as the name of the public group that is created for the cluster.</inlineHelpText>
        <label>Cluster Field for Public Groups</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableMediaElementAutomaticResize__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, the user will have the option to resize a desktop image for tablet and/or mobile.</description>
        <inlineHelpText>If true, the user will have the option to resize a desktop image for tablet and/or mobile.</inlineHelpText>
        <label>Enable Media Element Automatic Resize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxSizeDesktop__c</fullName>
        <defaultValue>1280</defaultValue>
        <description>Defines the maximum size (logical resolution) that an image can have for desktop when uploading a media element.</description>
        <inlineHelpText>Defines the maximum size (logical resolution) that an image can have for desktop when uploading a media element.</inlineHelpText>
        <label>Max. Size Desktop</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSizeMobile__c</fullName>
        <defaultValue>480</defaultValue>
        <label>Max. Size Mobile</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSizeTablet__c</fullName>
        <defaultValue>768</defaultValue>
        <description>Defines the maximum size (logical resolution) that an image can have for tablet when uploading a media element.</description>
        <inlineHelpText>Defines the maximum size (logical resolution) that an image can have for tablet when uploading a media element.</inlineHelpText>
        <label>Max. Size Tablet</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesforceDomain__c</fullName>
        <label>Salesforce Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accelerator Settings</label>
</CustomObject>